inflib/src/main/java/edu/ucla/belief/io/hugin/HuginReader.java
/* Generated By:JavaCC: Do not edit this line. HuginReader.java */
package edu.ucla.belief.io.hugin;

import edu.ucla.belief.io.dsl.DSLConstants;
import edu.ucla.belief.*;
import edu.ucla.belief.io.*;
//import edu.ucla.util.JVMTI;
import edu.ucla.util.ProgressMonitorable;

import java.util.*;
import java.io.*;

/** @author James Park
    @author keith cascio
    @since 20020226
    @since 20060518 */
public class HuginReader implements ProgressMonitorable, HuginReaderConstants {
        public static final String STR_MAP_TOKEN = "__Map__";

        /** @since 20060804 */
        public void setRelaxed( boolean flag ){
                this.myFlagRelaxed = flag;
        }

        public void setEstimator( SkimmerEstimator huginworkestimator ){
                myEstimator = huginworkestimator;
                if( myEstimator != null ){
                        myProgressMax = myEstimator.getProgressMax();
                }
        }

        public void setConstructionTask( NodeLinearTask task ){
                myConstructionTask = task;
        }

        public BeliefNetwork beliefNetwork() throws ParseException {
                BeliefNetwork ret = null;
                try{
                        ret = HuginReader.this.doBeliefNetwork();
                }finally{
                        myFlagFinished = true;
                }
                return ret;
        }

        /** interface ProgressMonitorable
		@since 20060518 */
        public int getProgress(){
                return myProgress;
        }

        /** interface ProgressMonitorable
		@since 20060518 */
        public int getProgressMax(){
                return myProgressMax;
        }

        /** interface ProgressMonitorable
		@since 20060519 */
        public boolean isFinished(){
                return myFlagFinished;
        }

        /** interface ProgressMonitorable
		@since 20060519 */
        public String getNote(){
                return "reading file...";
        }

        /** interface ProgressMonitorable
		@since 20060519 */
        public ProgressMonitorable[] decompose(){
                if( myDecomp == null ) myDecomp = new ProgressMonitorable[] { HuginReader.this };
                return myDecomp;
        }

        /** interface ProgressMonitorable
		@since 20060519 */
        public String getDescription(){
                return "HuginReader";
        }

    public static void main(String args[])
    {
                try
                {
                        Definitions.STREAM_TEST.println("Starting");
                        for(int i=0;i<args.length;i++)
                        {
                        Definitions.STREAM_TEST.println(args[i]);
                                HuginReader reader=new HuginReader(new java.io.FileReader(new File(args[0])));
                                //HuginNet obj=reader.huginNet();
                                //obj.makeNetwork();
                                Definitions.STREAM_TEST.println("success");
                        }
                } catch(Exception e)
                {
                        System.err.println(e);
                        e.printStackTrace();
                }
        }

        //private long elapsedNodeBlock      = 0;
        //private long elapsedPotentialBlock = 0;

        private SkimmerEstimator myEstimator;
        private int     myProgress     = 0;
        private int     myProgressMax  = 1;
        private boolean myFlagFinished = false;
        private ProgressMonitorable[] myDecomp;
        private NodeLinearTask myConstructionTask;
        private boolean myFlagRelaxed = false;

  final public BeliefNetwork doBeliefNetwork() throws ParseException {
        //long start = JVMTI.getCurrentThreadCpuTimeUnsafe();

        //HuginNet net=new HuginNetImpl();
        HuginNode node = null;
        HuginPotential potential = null;
        Map nodeNamesToFiniteVariables = new HashMap();
        Map finiteVariablesToPotentials = new HashMap();
        Collection potentials = new LinkedList();
        Map netParams = null;
        Variable fVar = null;
        String tempName = null;
        HuginFileVersion hfv = HuginFileVersion.V57;

        int incNodeBlock = 0;
        int incPoteBlock = 0;
        if( myEstimator != null ){
                myProgressMax = myEstimator.getProgressMax();
                incNodeBlock  = myEstimator.getProgressIncrementNodeBlock();
                incPoteBlock  = myEstimator.getProgressIncrementPoteBlock();
        }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTINUOUS:
      case DISCRETE:
      case NODE:
      case DECISION:
      case UTILITY:
      case POTENTIAL:
      case NET:
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTINUOUS:
      case DISCRETE:
      case NODE:
      case DECISION:
      case UTILITY:
        node = nodeBlock();
                        if( Thread.currentThread().isInterrupted() ) {if (true) return (BeliefNetwork)null;}
                        //net.add(node);
                        //fVar = node.makeVariable();
                        //fVar.userobject = node;
                        nodeNamesToFiniteVariables.put( node.getID(), node );
                        //net.add( node );
                        myProgress += incNodeBlock;
        break;
      case POTENTIAL:
        potential = potentialBlock();
                        if( Thread.currentThread().isInterrupted() ) {if (true) return (BeliefNetwork)null;}
                        //net.add(potential);
                        potentials.add( potential );
                        myProgress += incPoteBlock;
        break;
      case NET:
        netParams = netBlock();
                        hfv = HuginFileVersion.V57;
                        //net.setParams(netParams);
                        HuginReader.this.digest( netParams );
        break;
      case CLASS:
        netParams = classBlock(nodeNamesToFiniteVariables, potentials);
                        hfv = HuginFileVersion.V61;
                        HuginReader.this.digest( netParams );
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                //long mid0 = JVMTI.getCurrentThreadCpuTimeUnsafe();

                for( Iterator it = potentials.iterator(); it.hasNext(); )
                {
                        potential = (HuginPotential) it.next();
                        tempName = potential.joints.get(0).toString();
                        fVar = (Variable)nodeNamesToFiniteVariables.get( tempName );
                        finiteVariablesToPotentials.put( fVar, new TableShell( (Table) potential.makePotential(nodeNamesToFiniteVariables) ) );
                }

                //long mid1 = JVMTI.getCurrentThreadCpuTimeUnsafe();

                HuginNetImpl ret = new HuginNetImpl( false );
                ret.induceGraph( finiteVariablesToPotentials, myConstructionTask );
                if( Thread.currentThread().isInterrupted() ) {if (true) return (BeliefNetwork)null;}
                ret.setVersion( hfv );
                if( netParams != null ) ret.setParams( netParams );

                //long end = JVMTI.getCurrentThreadCpuTimeUnsafe();

                //long first = mid0 - start;
                //long second = mid1 - mid0;
                //long last  = end - mid1;
                //double total = (double) (end - start);

                //double estimFrac = ((double)myEstimator.getCost()) / total;
                //double firstFrac = ((double)first) / total;
                //double nodeFrac  = ((double)elapsedNodeBlock) / total;
                //double poteFrac  = ((double)elapsedPotentialBlock) / total;
                //double secondFrac = ((double)second) / total;
                //double lastFrac = ((double)last) / total;

                //System.out.println( "HuginReader.beliefNetwork()" );
                //System.out.println( "    estimation      : " + NetworkIO.FORMAT_PROFILE_PERCENT.format(estimFrac) + " (" + NetworkIO.formatTime(myEstimator.getCost())
                //              + "),\n    parsing         : " + NetworkIO.FORMAT_PROFILE_PERCENT.format(firstFrac) + " (" + NetworkIO.formatTime(first)
                //              + "),\n        nodes       : " + NetworkIO.FORMAT_PROFILE_PERCENT.format(nodeFrac) + " (" + NetworkIO.formatTime(elapsedNodeBlock)
                //              + "),\n        potentials  : " + NetworkIO.FORMAT_PROFILE_PERCENT.format(poteFrac) + " (" + NetworkIO.formatTime(elapsedPotentialBlock)
                //              + "),\n    make potentials : " + NetworkIO.FORMAT_PROFILE_PERCENT.format(secondFrac) + " (" + NetworkIO.formatTime(second)
                //              + "),\n    new HuginNetImpl: " + NetworkIO.FORMAT_PROFILE_PERCENT.format(lastFrac) + " (" + NetworkIO.formatTime(last) + ")" );

                myFlagFinished = true;
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Map netBlock() throws ParseException {
        Map values;
    jj_consume_token(NET);
    jj_consume_token(19);
    values = valueList();
    jj_consume_token(20);
                {if (true) return values;}
    throw new Error("Missing return statement in function");
  }

  final public Map classBlock(Map nodeNamesToFiniteVariables, Collection potentials) throws ParseException {
        HuginNode node = null;
        HuginPotential potential = null;
        Map result = new HashMap();
        Token key;
        Object value;
        LinkedList mapPrefixes = new LinkedList();
    jj_consume_token(CLASS);
    jj_consume_token(ID);
    jj_consume_token(19);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTINUOUS:
      case DISCRETE:
      case NODE:
      case DECISION:
      case UTILITY:
      case POTENTIAL:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTINUOUS:
      case DISCRETE:
      case NODE:
      case DECISION:
      case UTILITY:
        node = nodeBlock();
                        nodeNamesToFiniteVariables.put( node.getID(), node );
        break;
      case POTENTIAL:
        potential = potentialBlock();
                        potentials.add( potential );
        break;
      case ID:
        key = jj_consume_token(ID);
        jj_consume_token(21);
        value = value(key.image.startsWith( PropertySuperintendent.KEY_HUGIN_POSITION ) || (key.image.startsWith( DSLConstants.STR_KEY_PREFIX ) && !key.image.startsWith( DSLConstants.KEY_OBSERVATION_COST_NODECOSTSLIST ) ));
        jj_consume_token(22);
                        if( value == STR_MAP_TOKEN )//it's a Map
                        {
                                Map newMap = new HashMap();
                                mapPrefixes.add( key.image );
                                result.put( key.image, newMap );
                        }
                        else
                        {
                                Map destination = result;
                                String destinationKey = key.image;

                                if( !mapPrefixes.isEmpty() )
                                {
                                        for( Iterator it= mapPrefixes.iterator(); it.hasNext(); )
                                        {
                                                String currentPrefix = (String) it.next();
                                                if( key.image.startsWith( currentPrefix ) )
                                                {
                                                        destination = (Map) result.get( currentPrefix );
                                                        destinationKey = key.image.substring( currentPrefix.length() );
                                                }
                                        }
                                }

                                if( PropertySuperintendent.KEY_HUGINITY.equals( destinationKey ) && PropertySuperintendent.VALUE_PERMISSIVE.equals( value ) ){
                                        HuginReader.this.setRelaxed( true );
                                }

                                destination.put( destinationKey,value );
                        }
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }

    jj_consume_token(20);
                {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public HuginPotential potentialBlock() throws ParseException {
        //long start = JVMTI.getCurrentThreadCpuTimeUnsafe();
        Token var;
        List joints=new ArrayList();
        List conditioned=new ArrayList();
        Map values;
    jj_consume_token(POTENTIAL);
    jj_consume_token(23);
    joints = idList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 24:
      jj_consume_token(24);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        conditioned = idList();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(25);
    jj_consume_token(19);
    values = valueList();
    jj_consume_token(20);
                HuginPotential ret = new HuginPotential( joints, conditioned, values, myFlagRelaxed );
                //long end = JVMTI.getCurrentThreadCpuTimeUnsafe();
                //elapsedPotentialBlock += (end - start);
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public List idList() throws ParseException {
        Token t;
        List result=new ArrayList();
    label_3:
    while (true) {
      t = jj_consume_token(ID);
                result.add(t.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
    }
                {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public HuginNode nodeBlock() throws ParseException {
        //long start = JVMTI.getCurrentThreadCpuTimeUnsafe();
        Token vartype=null;
        Token nodetype=null;
        Token name;
        Map values;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONTINUOUS:
    case DISCRETE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTINUOUS:
        vartype = jj_consume_token(CONTINUOUS);
        break;
      case DISCRETE:
        vartype = jj_consume_token(DISCRETE);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NODE:
      nodetype = jj_consume_token(NODE);
      break;
    case DECISION:
      nodetype = jj_consume_token(DECISION);
      break;
    case UTILITY:
      nodetype = jj_consume_token(UTILITY);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    name = jj_consume_token(ID);
    jj_consume_token(19);
    values = valueList();
    jj_consume_token(20);
                int vt;
                if(vartype==null){
                        vt=DISCRETE;
                }else{
                        vt=vartype.kind;
                }
                HuginNode ret = new HuginNodeImpl( name.image, values, nodetype.kind, vt );
                //long end = JVMTI.getCurrentThreadCpuTimeUnsafe();

                //elapsedNodeBlock += (end - start);
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Map valueList() throws ParseException {
        Map result=new HashMap();
        Token key;
        Object value;
        LinkedList mapPrefixes = new LinkedList();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      key = jj_consume_token(ID);
      jj_consume_token(21);
      value = value(key.image.startsWith( PropertySuperintendent.KEY_HUGIN_POSITION ) || (key.image.startsWith( DSLConstants.STR_KEY_PREFIX ) && !key.image.startsWith( DSLConstants.KEY_OBSERVATION_COST_NODECOSTSLIST ) ));
      jj_consume_token(22);
                if( value == STR_MAP_TOKEN )//it's a Map
                {
                        Map newMap = new HashMap();
                        mapPrefixes.add( key.image );
                        result.put( key.image, newMap );
                }
                else
                {
                        Map destination = result;
                        String destinationKey = key.image;

                        if( !mapPrefixes.isEmpty() )
                        {
                                for( Iterator it= mapPrefixes.iterator();
                                        it.hasNext(); )
                                {
                                        String currentPrefix = (String) it.next();
                                        if( key.image.startsWith( currentPrefix ) )
                                        {
                                                destination = (Map) result.get( currentPrefix );
                                                destinationKey = key.image.substring( currentPrefix.length() );
                                        }
                                }
                        }

                        destination.put( destinationKey,value );
                }
    }
                {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public Object value(boolean asInteger) throws ParseException {
  Token x;
  List newList;
  Object val;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAP_LIT:
      x = jj_consume_token(MAP_LIT);
                    {if (true) return STR_MAP_TOKEN;}/* let valueList() know about a new Map */
      break;
    case VALSTRING:
      x = jj_consume_token(VALSTRING);
                    {if (true) return stripQuotes( x.image );}
      break;
    case NUM:
      x = jj_consume_token(NUM);
                    {if (true) return asInteger ? ((Number) new Integer( x.image )) : ((Number) new Double( x.image ));}
      break;
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_1(2)) {
        x = jj_consume_token(ID);
                    {if (true) return x.image;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          val = function();
                    {if (true) return val;}
          break;
        case 23:
          jj_consume_token(23);
           newList=new ArrayList();
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case MAP_LIT:
            case NUM:
            case VALSTRING:
            case ID:
            case 23:
              ;
              break;
            default:
              jj_la1[11] = jj_gen;
              break label_5;
            }
            val = value(asInteger);
                                                                 newList.add(val);
          }
          jj_consume_token(25);
                    {if (true) return newList;}
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  String stripQuotes(String str) throws ParseException {
        return str.substring(1,str.length()-1);
  }

  private void digest(Map netParams) throws ParseException {
        try{
                if( netParams == null ) return;
                if( netParams.containsKey( PropertySuperintendent.KEY_HUGINITY ) && (PropertySuperintendent.VALUE_PERMISSIVE.equals( netParams.get( PropertySuperintendent.KEY_HUGINITY ) ) ) ) HuginReader.this.setRelaxed( true );
        }catch( Exception exception ){
                System.err.println( "warning! HuginReader.digest() caught " + exception );
        }
  }
